--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc -p tsconfig.json && node src/index.js",
+    "start": "tsc -p tsconfig.json && node src/index.js && exit 1",
     "compile": "tsc -p tsconfig.json"
   },
   "keywords": [],
