--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nvm": "^0.0.4",
+    "tsc": "^2.0.4"
+  }
 }
